# cmake_install_testing

./: readme.md
cmake_tests/: CMakeLists.txt  cmake_testConfig.cmake.in  uninstall.sh
cmake_tests/src/: cmake_test.cpp  cmake_test.hpp
test_pkg/: CMakeLists.txt
test_pkg/src/: test_pkg.cpp
